--- a/vignettes/multiMerge.Rmd
+++ b/vignettes/multiMerge.Rmd
@@ -2,10 +2,14 @@
 title: "Merge multiple data frames with `multiMerge`"
 author: "Florian Detsch"
 date: "28.05.2015"
-output: html_document
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Merge multiple data frames with `multiMerge`}
+  %\VignetteEngine{knitr::rmarkdown}
+  \usepackage[utf8]{inputenc}
 ---
 
-```{r pkg, echo=FALSE}
+```{r pkg, echo=FALSE, message=FALSE}
 library(Orcs)
 ```
 
