--- a/vignettes/setwdOS.Rmd
+++ b/vignettes/setwdOS.Rmd
@@ -2,10 +2,14 @@
 title: "Set working directory OS-dependent with `setwdOS`"
 author: "Florian Detsch"
 date: "28.05.2015"
-output: html_document
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Set working directory OS-dependent with `setwdOS`}
+  %\VignetteEngine{knitr::rmarkdown}
+  \usepackage[utf8]{inputenc}
 ---
 
-```{r pkg, echo=FALSE}
+```{r pkg, echo=FALSE, message=FALSE}
 library(Orcs)
 ```
 
