Initial commit: substrC(); bumped version.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Orcs 1.2.0
 New features:
 
   * Moved coords2Lines(), coords2Polygons() from package 'mapview'.
+  * substrC() as C++ version of base-R substr().
 
 
 Orcs 1.1.1
