--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Orcs 1.2.0.9000 (2022-09-23)
+
+features and improvements
+
+bug fixes
+
+documentation etc
+
+miscellaneous
+
+
 Orcs 1.2.0
 
 New features:
