--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Orcs 1.2.2.9000 (2022-12-20)
+
+features and improvements
+
+bug fixes
+
+documentation etc
+
+miscellaneous
+
+
 Orcs 1.2.2 (2022-09-26)
 
 miscellaneous
